# SimpleFER

./: .gitignore  CMakeLists.txt  README.md  environment.yaml
scripts/: login.py  register.py  sqlite.py  visualize.py
src/: SFER.py  SimpleFER.cpp  analyze.cpp  analyze.h  emotion.py  functions.cpp
src/SimpleFER/: FERPipeline.cpp  FERPipeline.h  Face.cpp  Face.h  SimpleFER.cpp  User.cpp  User.h  analyze.cpp  analyze.h  functions.cpp  functions.h  functions.hpp  main.cpp
src/models/: Constants.py  Emo_CNN.py  Expression_CNN.py  ResNet18.py  Utils.py  VGG.py  test.py  train.py  trans.py
